# M18QxAzureIoT

./: .gitignore  .gitmodules  Avnet_GFX.cpp  Avnet_GFX.h  LICENSE  Makefile.am  NTPClient.hpp  OLEDB_SPI.cpp  OLEDB_SPI.h  OLEDB_SSD1306.cpp  OLEDB_SSD1306.hpp  README.md  adc.hpp  avnet_splash.h  azClientFuncs.cpp  azIoTClient.cpp  azIoTClient.h  barometer.hpp  button.cpp  button.hpp  configure  configure.ac  devinfo.hpp  foa.cpp  foa.h  gps.cpp  gps.hpp  hts221.cpp  hts221.hpp  i2c.hpp  i2c_interface.cpp  i2c_interface.hpp  jsmn.h  led.hpp  lis2dw12.cpp  lis2dw12.hpp  mal.cpp  mal.hpp  mon.sh  oledb_ssd1306.cpp  (+7 more)
msft_azure_iot_sdk/iothub_client/src/: parson.c
msft_azure_iot_sdk/platform/: mbed_wait_api.h  platform_linux.c  tickcounter_linux.c  tlsio_mbedtls.c
